--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,61 +1,45 @@
-<!-- <section class="login-block">
-  <div class="container">
-
-    <div class="row">
-      <div class="col-md-12">
-        <button (click)="handleAuth()" class="btn btn-lg btn-google btn-block text-uppercase btn-outline">
-          <img src="https://res.cloudinary.com/dz4tt9omp/image/upload/v1712537582/google-logo.png"> Signup Using Google
-        </button>
-      </div>
-    </div>
-  </div>
-</section> -->
-
-
-
-
 <div class="container">
   <div class="row">
-      <div class="col-md-5 mx-auto">
-          <div id="first" class="myform form">
-              <div class="logo mb-3">
-                  <div class="col-md-12 text-center">
-                      <h1>Login</h1>
-                  </div>
-              </div>
-              <form action="" method="post" name="loginForm">
-                  <div class="form-group">
-                      <label for="email">Email address</label>
-                      <input type="email" name="email" class="form-control" id="email" aria-describedby="emailHelp"
-                          placeholder="Enter email">
-                  </div>
-                  <div class="form-group">
-                      <label for="password">Password</label>
-                      <input type="password" name="password" id="password" class="form-control"
-                          aria-describedby="emailHelp" placeholder="Enter Password">
-                  </div>
-                  <div class="form-group">
-                      <p class="text-center">By signing up you accept our <a href="#">Terms Of Use</a></p>
-                  </div>
-                  <div class="col-md-12 text-center">
-                      <button type="submit" class="btn btn-primary btn-block mybtn">Login</button>
-                  </div>
-                  <div class="col-md-12">
-                      <div class="login-or">
-                          <hr class="hr-or">
-                          <span class="span-or">or</span>
-                      </div>
-                  </div>
-                  
-                  
-              </form>
-              <button (click)="handleAuth()" class="google btn mybtn">
-                <img src="https://res.cloudinary.com/dz4tt9omp/image/upload/v1712537582/google-logo.png"> Signup Using Google
-              </button>
-              <div class="form-group">
-                <p class="text-center">Don't have an account? <a href="#" id="signup">Sign up here</a></p>
+    <div class="col-md-5 mx-auto">
+      <div id="first" class="myform form">
+        <div class="logo mb-3">
+          <div class="col-md-12 text-center">
+            <h1>Login</h1>
+          </div>
+          <div *ngIf="errorMessage" class="alert alert-danger">{{ errorMessage }}</div>
+        </div>
+        <form (ngSubmit)="handleEmailAuth()" name="loginForm">
+          <div class="form-group">
+            <label for="email">Email address</label>
+            <input type="email" name="email" class="form-control" id="email" [(ngModel)]="email"
+              placeholder="Enter email" required>
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" class="form-control" [(ngModel)]="password"
+              placeholder="Enter Password" required>
+          </div>
+          <div class="form-group">
+            <p class="text-center">By signing up you accept our <a href="#">Terms Of Use</a></p>
+          </div>
+          <div class="col-md-12 text-center">
+            <button type="submit" class="btn btn-primary btn-block mybtn">Login</button>
+          </div>
+          <div class="col-md-12">
+            <div class="login-or">
+              <hr class="hr-or">
+              <span class="span-or">or</span>
             </div>
           </div>
+        </form>
+        <button (click)="handleAuth()" class="google btn mybtn">
+          <img src="https://res.cloudinary.com/dz4tt9omp/image/upload/v1712537582/google-logo.png"> Signup Using Google
+        </button>
+        <div class="form-group">
+          <p class="text-center">Don't have an account? <a [routerLink]="['/register']" id="signup">Sign up here</a></p>
+
+        </div>
       </div>
+    </div>
   </div>
 </div>
