--- a/src/app/pages/navbar/navbar.component.css
+++ b/src/app/pages/navbar/navbar.component.css
@@ -1,9 +1,8 @@
-/* layout.component.css */
-
 body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
+    overflow: hidden;
 }
 
 #sidebar {
@@ -65,19 +64,25 @@ body {
 
 #content {
     margin-left: 250px;
-    padding: 20px;
-    background: #f0f2f5;
+    background-image: url('../../../assets/img/1.jpg');
     min-height: 100vh;
+    padding: 0; 
+    background-size: cover; /* Ensure the image covers the entire element */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Prevent the image from repeating */
 }
+
+
 
 #content nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 60px;
-    background:  #11101d;
-    padding: 0 20px;
+    background: #11101d;
     border-bottom: 1px solid #ddd;
+    margin: 0; /* Remove any margin */
+    padding: 0; /* Remove any padding */
 }
 
 #content nav .nav-link {
@@ -151,8 +156,14 @@ body {
     height: 40px;
     border-radius: 50%;
     border-color: yellow;
+    margin-right: 20px;
 }
 
 .main-content {
-    margin-top: 20px;
+    margin: 0; /* Remove margin from all sides */
+    padding: 10px; /* Add padding for content */
+    /* background-color:#ddd; */
+    width: 100%; /* Ensure full width */
+    height: max-content;
+    box-sizing: border-box; /* Include padding and border in the element's width and height */
 }
